--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>My Web Page</title>
   </head>
   <body>
-    <h1>Welcome to My Web Page</h1>
+    <h1>My Web Page</h1>
     <p>This is a simple web page.</p>
   </body>
 </html>
